# nb-additions

./: .env.prod  .gitignore  README.md  pyproject.toml
lgc_nb_additions/: __init__.py
lgc_nb_additions/fix_qq_pic_ssl/: __init__.py  main.py
lgc_nb_additions/leave_duplicate_group/: __init__.py  main.py
lgc_nb_additions/leave_duplicate_group/adapters/: onebot_v11.py
lgc_nb_additions/req_forward/: __init__.py  config.py  db.py  main.py
lgc_nb_additions/req_forward/migrations/: 11806f37b8ea_up.py  b1cac37e9a7b_up.py  f1c5ad2542ee_init.py
lgc_nb_additions/rm_duplicate_bot/: __init__.py  main.py
lgc_nb_additions/rm_duplicate_bot/adapters/: __init__.py  base.py
lgc_nb_additions/target_sync/: __init__.py  main.py
lgc_nb_additions/uniapi/: __init__.py  collectors.py
lgc_nb_additions/uniapi/onebot_v11/: __init__.py
lgc_nb_additions/utils/: common.py  store.py
lgc_nb_additions/utils/uniapi/: collectors.py
lgc_nb_additions/utils/uniapi/onebot_v11/: __init__.py
nonebot_plugin_example/: __init__.py
